Improve class naming, update README

--- a/lib/notification-badge.css
+++ b/lib/notification-badge.css
@@ -1,7 +1,7 @@
 .notification-container {
   position: relative;
 }
-.notification-count {
+.notification-badge {
   position: absolute; 
   display: block;
   top: -8px; 
