--- a/lib/notification-badge.css
+++ b/lib/notification-badge.css
@@ -10,9 +10,9 @@
   width: 16px;
   height: 16px;
   line-height: 16px;
-  font-size: 10px;
-  color: #fff; 
-  background-color: rgba(212, 19, 13, 0.8); 
+  font-size: 11px;
+  color: rgb(255, 255, 255); 
+  background-color: rgba(203, 32, 39, 0.75); 
   border-radius: 50%; 
-  padding: 0 5.5px; 
+  text-align: center;
 }
